ola-parser/src/testdata/syntaxTests/structs/contract_global_struct_name_clash.sol
contract S {}
struct S {
    u256 a;
}
// ----
// DeclarationError 2333: (14-37): Identifier already declared.
